--- a/index.ipynb
+++ b/index.ipynb
@@ -31,7 +31,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -66,6 +68,15 @@
     "    for word in inner_words:\n",
     "        print(f\"     this is iteration {word} of the INNER loop\")\n",
     "    print(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list"
    ]
   },
   {
