Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -76,7 +76,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "list"
+    "list_of_five = range(5)\n",
+    "list_of_ten = range(20)"
    ]
   },
   {
