--- a/index.ipynb
+++ b/index.ipynb
@@ -77,7 +77,7 @@
    "outputs": [],
    "source": [
     "list_of_five = range(5)\n",
-    "list_of_ten = range(20)"
+    "list_of_13 = range(13)"
    ]
   },
   {
