--- a/index.ipynb
+++ b/index.ipynb
@@ -77,7 +77,10 @@
    "outputs": [],
    "source": [
     "list_of_five = range(5)\n",
-    "list_of_13 = range(13)"
+    "list_of_13 = range(13)\n",
+    "\n",
+    "for i in list_of_five:\n",
+    "    for"
    ]
   },
   {
