Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -80,7 +80,8 @@
     "list_of_13 = range(13)\n",
     "\n",
     "for i in list_of_five:\n",
-    "    for"
+    "    print(\"Looping through List of 5\")\n",
+    "    for j in list"
    ]
   },
   {
