Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -81,7 +81,8 @@
     "\n",
     "for i in list_of_five:\n",
     "    print(\"Looping through List of 5\")\n",
-    "    for j in list"
+    "    for j in list_of_13:\n",
+    "        print(\"Looping through List of 13\")"
    ]
   },
   {
