--- a/index.ipynb
+++ b/index.ipynb
@@ -78,11 +78,13 @@
    "source": [
     "list_of_five = range(5)\n",
     "list_of_13 = range(13)\n",
+    "total_iterations = 0\n",
     "\n",
     "for i in list_of_five:\n",
     "    print(\"Looping through List of 5\")\n",
     "    for j in list_of_13:\n",
-    "        print(\"Looping through List of 13\")"
+    "        print(\"Looping through List of 13\")\n",
+    "        total"
    ]
   },
   {
