--- a/index.ipynb
+++ b/index.ipynb
@@ -84,7 +84,8 @@
     "    print(\"Looping through List of 5\")\n",
     "    for j in list_of_13:\n",
     "        print(\"Looping through List of 13\")\n",
-    "        total"
+    "        total_iterations += 1\n",
+    "print(total_iteration)"
    ]
   },
   {
