--- a/index.ipynb
+++ b/index.ipynb
@@ -77,15 +77,15 @@
    "outputs": [],
    "source": [
     "list_of_five = range(5)\n",
-    "list_of_13 = range(13)\n",
+    "list_of_thirteen = range(13)\n",
     "total_iterations = 0\n",
     "\n",
     "for i in list_of_five:\n",
     "    print(\"Looping through List of 5\")\n",
-    "    for j in list_of_13:\n",
+    "    for j in list_of_thirteen:\n",
     "        print(\"Looping through List of 13\")\n",
     "        total_iterations += 1\n",
-    "print(total_iteration)"
+    "print(total_iterations)"
    ]
   },
   {
