Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -82,7 +82,7 @@
     "\n",
     "for i in list_of_five: # 0\n",
     "    print(\"Looping through List of 5\")\n",
-    "    for j in list_of_thirteen:\n",
+    "    for j in list_of_thirteen: # \n",
     "        print(\"Looping through List of 13\")\n",
     "        total_iterations += 1\n",
     "print(total_iterations)"
