--- a/index.ipynb
+++ b/index.ipynb
@@ -80,7 +80,7 @@
     "list_of_thirteen = range(13)\n",
     "total_iterations = 0\n",
     "\n",
-    "for i in list_of_five: # 0, \n",
+    "for i in list_of_five: # 0, 1\n",
     "    print(\"Looping through List of 5\")\n",
     "    for j in list_of_thirteen: # 0, 1, ..., 12,  \n",
     "        print(\"Looping through List of 13\")\n",
