Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -72,9 +72,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Looping through List of 5\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 5\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 5\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 5\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 5\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "Looping through List of 13\n",
+      "65\n"
+     ]
+    }
+   ],
    "source": [
     "list_of_five = range(5)\n",
     "list_of_thirteen = range(13)\n",
